[package]
name = "proxy-proxy-proxyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
#clap = { version = "4.1.11", features = ["derive"] }
#futures-util = "0.3.27"
hyper = { version = "0.14.25", features = ["full"] }
hyper-trust-dns = "0.5.0"
once_cell = "1.17.1"
sha256 = "1.1.2"
tls-parser = "0.11.0"
tokio = { version = "1.26.0", features = ["full"] }
#tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
